# zzz2.0

./: README.md  catkin_make_planning.sh  default.rviz  find_all_package.bash  graduate.rviz  load_control.sh  my_lane2.txt  my_lane4.txt  record_bag.sh  run_socket_server.sh  rviz_conf.rviz  test_pickle.py  track_process.py
devel/: .catkin  .rosinstall
devel/include/zzz_cognition_msgs/: DrivingSpace.h  DynamicBoundary.h  DynamicBoundaryPoint.h  JunctionMapState.h  LaneState.h  MapState.h  MultiLaneMapState.h  RoadObstacle.h  VehicleLocation.h  VehicleLocationArray.h
devel/include/zzz_driver_msgs/: AuxiliaryReport.h  ChassisReport.h  ControlReport.h  FrenetSerretState.h  FrenetSerretState2D.h  ResourceReport.h  RigidBodyState.h  RigidBodyStateStamped.h
devel/include/zzz_navigation_msgs/: Lane.h  LaneBoundary.h  LanePoint.h  LaneSituation.h  Map.h  MapString.h  ReroutingRequest.h  RoutingRequest.h
devel/include/zzz_perception_msgs/: BoundingBox.h  BoundingBox2D.h  CooperativeMsg.h  DetectionBox.h  DetectionBox2D.h  DetectionBox2DArray.h  DetectionBoxArray.h  Dimension2DWithCovariance.h  DimensionWithCovariance.h  LaneDetection.h  LaneDetectionArray.h  ObjectClass.h  ObjectSignals.h  Pose2DWithCovariance.h  TrackingBox.h  TrackingBoxArray.h
devel/include/zzz_planning_msgs/: DecisionTrajectory.h  PlannedTrajectory.h  VehicleState.h
devel/lib/pkgconfig/: autoware_msgs.pc  canbus.pc  canbus_msgs.pc  continental_radar_msgs.pc  global_localization.pc  huace_cgi_gnss.pc  newton_m2_gnss.pc  nova_viz.pc  novatel_gnss_msgs.pc  oxford_gps_msgs.pc  radar_msgs.pc  rslidar_msgs.pc  rslidar_sdk.pc  srr_radar_msgs.pc  tf4hmi.pc  trt.pc  us_radar_msgs.pc  usb_cam.pc  xp_g3.pc  xpmotors_can_msgs.pc  zzz_cognition_msgs.pc  zzz_cognition_object_locator.pc  zzz_common.pc  zzz_driver_msgs.pc  zzz_navigation_map_filter.pc  zzz_navigation_map_provider_sumo.pc  zzz_navigation_msgs.pc  zzz_navigation_pose_reporter.pc  zzz_perception_msgs.pc  zzz_planning_decision_continuous_models.pc  zzz_planning_decision_lane_models.pc  zzz_planning_msgs.pc  zzz_visualization_rviz_box_visualizer.pc  (+1 more)
launch/: cognition.launch  drivers.launch  map.launch  perception.launch  planning.launch
src/driver/gnss/huace_cgi/: .buildconfig  CMakeLists.txt  README.md  package.xml
src/driver/gnss/huace_cgi/launch/: gnss.launch
src/driver/gnss/huace_cgi/src/: dispatch.h  dispatch_m2.h  node.cpp  record  serial_port_object.cc  serial_port_object.h
src/localization/: changelog.md
src/localization/global_localization/: CMakeLists.txt  package.xml
src/localization/global_localization/launch/: global_fusion_M2_2.launch  global_fusion_oxford_2.launch  global_fusion_pp7.launch
src/localization/global_localization/src/: global_fusion_m2_2.cpp  global_fusion_oxford_2.cpp  global_fusion_pp7.cpp
src/perception/perception_union/: CMakeLists.txt  package.xml
src/perception/perception_union/config/: cluster.yaml  ground_filter.yaml  lidar.yaml  lidar_imu_cal.yaml  lidar_track.yaml  lidar_track_kf.yaml  localmap.yaml  perception.yaml  point_pillars.yaml  segment.yaml  tmp.py  zlog.conf
src/perception/perception_union/include/common/: benchmark.h  bitmap.h  bounding_line.h  cxxopts.hpp  detected_object.h  geometry.h  log.hpp  time_point.h
src/perception/perception_union/include/lidar/: lidar_process.h
src/perception/perception_union/include/lidar/cluster/: euclidean_cluster.h
src/perception/perception_union/include/lidar/ground_filter/: plane_ground_filter.h
src/perception/perception_union/include/lidar/point_pillars/: boundingbox.h  feature_generator.h  pointpillars.h  postprocess.h  postprocess_cuda.h
src/perception/perception_union/include/lidar/segmentation/: cluster2d.h  feature_generator.h  feature_generator_cuda.h  prekernel.h  segmentation.h
src/perception/perception_union/include/lidar/tracker/: HungarianAlg.h  assignment.hpp  gnn_bipartite_graph_matcher.h
src/perception/perception_union/include/lidar/tracker/kf/: lidar_track.h  standard_kalman_config.h  standard_kalman_filter.h  trajectory.h
src/perception/perception_union/include/localmap/: local_map.h
src/perception/perception_union/include/perception/: perception.h
src/perception/perception_union/launch/: perception.launch
src/perception/perception_union/node/: perception.cc  perception_node.cc
src/perception/perception_union/src/common/log/: CMakeLists.txt  log.cc
src/perception/perception_union/src/lidar/: CMakeLists.txt  lidar_process.cc
src/perception/perception_union/src/lidar/cluster/: CMakeLists.txt  euclidean_cluster.cc
src/perception/perception_union/src/lidar/ground_filter/: CMakeLists.txt  plane_ground_filter.cc  plane_ground_filter_v1.cc
src/perception/perception_union/src/lidar/point_pillars/: CMakeLists.txt  feature_generator.cpp  pointpillars.cpp  postprocess.cpp  postprocess.cu
src/perception/perception_union/src/lidar/segmentation/: CMakeLists.txt  cluster2d.cc  feature_generator.cc  feature_generator_cuda.cu  prekernel.cu  segmentation.cc
src/perception/perception_union/src/lidar/tracker/: CMakeLists.txt  HungarianAlg.cpp  gnn_bipartite_graph_matcher.cc
src/perception/perception_union/src/lidar/tracker/kf/: lidar_track.cc  standard_kalman_config.cc  standard_kalman_filter.cc  standard_kalman_test.cc
src/perception/perception_union/src/localmap/: CMakeLists.txt  local_map.cc
src/tools/: 0-0.txt  0_0.bag  11-0.txt  15+22.txt  20-0.txt  20_0.bag  21-1+10-0.txt  23-0+16-0.txt  23-0.txt  24+25.bag  24+25.txt  24-0.txt  24_0.bag  25-0.txt  25_park.txt  25_parking.bag  28.bag  README_RECORDROAD.txt  Record.txt  Tar-File-Installation-for-TensorRT.md  bag_capture_gui.py  big_loop.txt  door.bag  excel_exporter.py  jk.txt  new_18.txt  new_25.txt  new_3.txt  parking.bag  parkkk.bag  pd.bag  pd1.bag  ppp.bag  pre_track_process.py  renew.bag  track_process.py  xinhong.bag  xy.txt
src/tools/tensorrt_cpp/trt_build/: CMakeLists.txt  config.yaml
src/visualization/nova_viz/: CMakeLists.txt
src/visualization/nova_viz/include/nova_viz/: marker_publisher.h
src/visualization/nova_viz/src/: marker_publisher.cpp
(+447 files in other folders)
